[gd_scene format=3 uid="uid://dim7prkslfxh5"]

[ext_resource type="Script" uid="uid://bp854ohy45ra3" path="res://ui/health_ui.gd" id="1_ta2hd"]

[sub_resource type="Animation" id="Animation_qjkh3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/OldHealthBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "flash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/OldHealthBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2.5337272, 2.5337272, 2.5337272, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_boad6"]
_data = {
&"RESET": SubResource("Animation_qjkh3"),
&"flash": SubResource("Animation_g6k8r")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boad6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgyib"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjkh3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_qjkh3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.29219002, 0.29219005, 0.29219002, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g6k8r"]
gradient = SubResource("Gradient_qjkh3")
width = 256
height = 20

[sub_resource type="Gradient" id="Gradient_g6k8r"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.96185774, 0.7587951, 0.8185916, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_boad6"]
gradient = SubResource("Gradient_g6k8r")
width = 256
height = 20

[sub_resource type="Gradient" id="Gradient_boad6"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.9564864, 0.3347615, 0.3121374, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rgyib"]
gradient = SubResource("Gradient_boad6")
width = 256
height = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6k8r"]
bg_color = Color(0, 0, 0, 0.5568628)

[node name="HealthUI" type="VBoxContainer" unique_id=1591236862]
size_flags_horizontal = 4
theme_override_constants/separation = 0
script = ExtResource("1_ta2hd")
old_health_drop_speed = 0.28

[node name="FlashAnimator" type="AnimationPlayer" parent="." unique_id=2031871970]
libraries/ = SubResource("AnimationLibrary_boad6")

[node name="Label" type="Label" parent="." unique_id=195832353]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9564864, 0.3347615, 0.3121374, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_boad6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgyib")
text = "HEALTH"
horizontal_alignment = 1

[node name="RightDecoration" type="Control" parent="Label" unique_id=1575833738]
layout_mode = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Polygon2D" type="Polygon2D" parent="Label/RightDecoration" unique_id=1868954026]
polygon = PackedVector2Array(0, 0, 20, 36, 0, 36)

[node name="LeftDecoration" type="Control" parent="Label" unique_id=898829321]
layout_mode = 1
scale = Vector2(-1, 1)

[node name="Polygon2D" type="Polygon2D" parent="Label/LeftDecoration" unique_id=747118301]
polygon = PackedVector2Array(0, 0, 20, 36, 0, 36)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1437929718]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qjkh3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1745602489]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OldHealthBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer" unique_id=1591963603]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.9
texture_under = SubResource("GradientTexture2D_g6k8r")
texture_progress = SubResource("GradientTexture2D_boad6")

[node name="HealthBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer" unique_id=1343328842]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.7
texture_progress = SubResource("GradientTexture2D_rgyib")

[node name="HealthBarCover" type="PanelContainer" parent="PanelContainer" unique_id=1335960354]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g6k8r")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HealthBarCover" unique_id=1703176691]
layout_mode = 2
theme_override_constants/margin_bottom = 3

[node name="Control" type="Control" parent="PanelContainer/HealthBarCover/MarginContainer" unique_id=1359823675]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HealthBarCover/MarginContainer/Control" unique_id=1261570266]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 60
text = "X"
horizontal_alignment = 1
